--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -1,14 +1,30 @@
 ##################################################################################
 #  PROJECT PROPERTIES
 #
-#  Value of the PROJECT_NAME property will be used to create 1).war file 
-#  2)Create client JAR file and 3)Create namespace for web services.
+#  Value of the PROJECT_NAME property is used to create/name: 
+#		1) Output project directory folder name
+#		2) Beans JAR file name
+#		3) ORM JAR file name
+#  		4) Client JAR file name
+#		5) WAR file name
+#		6) Web Service Namespace
+#		7) Documentation title in the generated API (Javadocs)
 #
-#  NAMESPACE_PREFIX is used to create the XSDs. If XSDs are to be used for the
-#  cagrid, the value of the NAMESPACE_PREFIX is same as the GME namespace
+#  Value of the NAMESPACE_PREFIX is used to create:
+#		1) XSD's (Schema's) 
+#		2) XML Mapping and Unmapping files.
 #
-#  Value of the WEBSERVICE_NAME property will be used to:
-#		1) create deploy.wssd
+#  NOTE:  If XSDs are to be used for the caGRID, the value of the NAMESPACE_PREFIX 
+#  should be the same as the GME namespace
+#
+#  Value of the CSM_PROJECT_NAME property is used as a prefix when creating:
+#		1) The CSM security configuration file name
+#
+#  Value of the INSTANCE_LEVEL_SECURITY is used to enable/disable CSM instance
+#  level security.  Only relevant if SECURITY_ENABLED property is set to 'true'.
+#
+#  Value of the ATTRIBUTE_LEVEL_SECURITY is used to enable/disable CSM attribute
+#  level security.  Only relevant if SECURITY_ENABLED property is set to 'true'.
 #
 ##################################################################################
 PROJECT_NAME=example
@@ -95,19 +111,21 @@ CSM_DB_DIALECT=org.hibernate.dialect.OracleDialect
 #  CODE GENERATION OPTIONS
 ##################################################################################
 ##################################################################################
-#  Following properties are used to enable or disable code generation step. These
-#  properties accept values of either 'true' or 'false'. Setting the value to
-#  false disables a component and setting value to true enables the component
+#  The following properties are used to enable or disable code generation step(s). 
+#  These properties accept values of either 'true' or 'false'. Setting the value 
+#  to 'false' for a component disables the code generation of that component, while
+#  setting the value to 'true' enables it
 #
-#  VALIDATE_LOGICAL_MODEL if enabled checks for the validity of the object model
-#  VALIDATE_MODEL_MAPPING if enabled checks for the validity of the object to 
-#                         database mapping 
+#  VALIDATE_LOGICAL_MODEL 	if enabled checks for the validity of the object model
+#  VALIDATE_MODEL_MAPPING 	if enabled checks for the validity of the object to 
+#                         	database mapping 
 #  GENERATE_HIBERNATE_MAPPING if enabled generates Hibernate related artifacts
-#  GENERATE_BEANS if enabled generates Java beans from the object model
-#  GENERATE_CASTOR_MAPPING if enabled generates castor mapping files for the 
-#                          object model
-#  GENERATE_XSD if enabled generates the XSD
-#  GENERATE_WSDD if enabled generates the web services deployment file
+#  GENERATE_BEANS 			if enabled, generates Java beans from the object model
+#  GENERATE_CASTOR_MAPPING 	if enabled, generates castor mapping files for the 
+#                          	object model
+#  GENERATE_XSD 			if enabled, generates the XSD
+#  GENERATE_WSDD 			if enabled, generates the Web Services Deployment  
+                 			Descriptor (WSDD) file
 ##################################################################################
 VALIDATE_LOGICAL_MODEL=true
 VALIDATE_MODEL_MAPPING=true
