Added Argo Sample Model properties (as comments) so users can quickly switch between the EA and Argo versions of the SDK Sample model if so desired.
SVN-Revision: 1174

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -52,6 +52,8 @@ SERVER_URL=http://localhost:8080/${PROJECT_NAME}
 #  XMI_FILE specifies the name of the file which contains the object/data model. 
 #  The file is to be placed under models directory.
 ##################################################################################
+#MODEL_FILE=sdk.uml
+#MODEL_FILE_TYPE=ARGO
 MODEL_FILE=sdk.xmi
 MODEL_FILE_TYPE=EA
 
