Added target for ANTHILL copy operation
SVN-Revision: 1207

--- a/SDK4/build.xml
+++ b/SDK4/build.xml
@@ -527,4 +527,13 @@
 		</tar>
 		
 	</target>
+	
+	<target name="copy-sdk" if="anthill.artifacts.dir" description="Copy SDK target required for ANTHILL">
+		<copy todir="anthill.artifacts.dir">
+			<fileset dir="${basedir}">
+				<include name="**/*"/>
+			</fileset>
+		</copy>
+	</target>
+	
 </project>
