--- a/SDK4/build.xml
+++ b/SDK4/build.xml
@@ -530,7 +530,7 @@
 	
 	<target name="copy-sdk" if="anthill.artifacts.dir" description="Copy SDK target required for ANTHILL">
 		<copy todir="${anthill.artifacts.dir}">
-			<fileset dir="${basedir}">
+			<fileset dir="../../">
 				<include name="**/*"/>
 			</fileset>
 		</copy>
