Chnaged the name of the release package
SVN-Revision: 1255

--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -1,11 +1,12 @@
 codegen.dir=codegen
 system.dir=system
 
+file.prefix=caCORE_SDK_40
 release.dir=release
-release.binary.file=${release.dir}/cacoresdk.zip
-release.binary.tar.file=${release.dir}/cacoresdk.tar
-release.src.file=${release.dir}/cacoresdk-src.zip
-release.src.tar.file=${release.dir}/cacoresdk-src.tar
+release.binary.file=${release.dir}/${file.prefix}.zip
+release.binary.tar.file=${release.dir}/${file.prefix}.tar
+release.src.file=${release.dir}/${file.prefix}-src.zip
+release.src.tar.file=${release.dir}/${file.prefix}-src.tar
 junit.dir=junit
 
 output.dir=output
