Added echo statement
SVN-Revision: 1677

--- a/SDK4/junit/build.xml
+++ b/SDK4/junit/build.xml
@@ -45,6 +45,7 @@
 	</target>
 		
 	<target name="generateReport">
+		<echo>Generating report in ${report.dir}</echo>
 		<junitreport todir="${report.dir}">
 			<fileset dir="${report.dir}" includes="TEST-*.xml" />
 			<report format="frames" todir="${report.dir}" />
