--- a/SDK4/junit/build.xml
+++ b/SDK4/junit/build.xml
@@ -137,8 +137,8 @@
 	<target name="runThickClient" depends="createDir,compile,runThickClientJUnit,stop" description="Run JUnits for Thick client"/>
 	
 	<target name="runThickClientJUnit">
-		<SDKRunJUnit junitclasspath="thick-client-cp" junitoutputdir="${output.dir.thick-client}" junitsuffix="Test"/>
-		<SDKGenerateReport junitoutputdir="${output.dir.thick-client}"/>
+		<SDKRunJUnit junitClasspath="thick-client-cp" junitOutputDir="${output.dir.thick-client}" junitsuffix="Test"/>
+		<SDKGenerateReport junitOutputDir="${output.dir.thick-client}"/>
 	</target>	
 
 	<!-- ************************************************************************************************-->
@@ -148,8 +148,8 @@
 	<target name="runThickClientQuickTest" depends="createDir,compile,runThickClientQuickJUnit,stop" description="Run JUnit for Thick Client (Quick Mode)"/>
 	
 	<target name="runThickClientQuickJUnit">
-		<SDKRunJUnitSuite junitclasspath="thick-client-cp" junitoutputdir="${output.dir.thick-client}" junitsuite="test.gov.nih.nci.cacoresdk.SDKTestSuite"/>
-		<SDKGenerateReport junitoutputdir="${output.dir.thick-client}"/>
+		<SDKRunjunitSuite junitClasspath="thick-client-cp" junitOutputDir="${output.dir.thick-client}" junitSuite="test.gov.nih.nci.cacoresdk.SDKTestSuite"/>
+		<SDKGenerateReport junitOutputDir="${output.dir.thick-client}"/>
 	</target>	
 	
 	<!-- ************************************************************************************************-->
@@ -159,8 +159,8 @@
 	<target name="runRemoteClientTest" depends="createDir,compile,runRemoteClientJUnit,stop" description="Run JUnit for Remote Client"/>
 		
 	<target name="runRemoteClientJUnit">
-		<SDKRunJUnit junitclasspath="remote-client-cp" junitoutputdir="${output.dir.remote-client}" junitsuffix="Test"/>
-		<SDKGenerateReport junitoutputdir="${output.dir.remote-client}"/>
+		<SDKRunJUnit junitClasspath="remote-client-cp" junitOutputDir="${output.dir.remote-client}" junitsuffix="Test"/>
+		<SDKGenerateReport junitOutputDir="${output.dir.remote-client}"/>
 	</target>
 	
 </project>
