--- a/SDK4/build.xml
+++ b/SDK4/build.xml
@@ -164,7 +164,7 @@
 	*********************************************************************** -->
 	<target name="clean" description="Cleans the generated directories and files">
 		<SDKecho message="${ant.project.name}: Cleaning directories and files"/>
-		<delete dir="${output.dir}"/>
+		<delete dir="${output.project.dir}"/>
 		<delete dir="${release.dir}"/>
 		<property name="clean-all-performed" value="true"/>
 	</target>
@@ -174,6 +174,7 @@
 	*********************************************************************** -->
 	<target name="clean-all" depends="clean" description="Cleans the child projects and generated directories and files">
 		<SDKecho message="${ant.project.name}: Cleaning child projects"/>
+		<delete dir="${output.dir}"/>
 		<ant antfile="${codegen.dir}\build.xml" target="clean-all" inheritall="false" inheritrefs="false" />
 		<ant antfile="${system.dir}\build.xml"  target="clean" inheritall="false" inheritrefs="false" />
 		<ant antfile="${junit.dir}\build.xml"  target="clean" inheritall="false" inheritrefs="false" />
