Security JUnit Changes
SVN-Revision: 1695

--- a/SDK4/junit/build.xml
+++ b/SDK4/junit/build.xml
@@ -105,7 +105,7 @@
 			<delete dir="@{junitOutputDir}"/>
 			<mkdir dir="@{junitOutputDir}"/>
 			<junit printsummary="yes" fork="yes" maxmemory="512m" showoutput="false" failureproperty="fail-prop" errorproperty="error-prop" >
-				<sysproperty key="java.security.auth.login.config" value="./conf/local.config" />
+				<sysproperty key="java.security.auth.login.config" value="./conf/login.config" />
 				<classpath>
 					<path refid="@{junitClasspath}"/>
 				</classpath>
