Added missing comment
SVN-Revision: 1703

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -127,7 +127,7 @@ CSM_DB_DIALECT=org.hibernate.dialect.OracleDialect
 #                          	object model
 #  GENERATE_XSD 			if enabled, generates the XSD
 #  GENERATE_WSDD 			if enabled, generates the Web Services Deployment  
-                 			Descriptor (WSDD) file
+#                 			Descriptor (WSDD) file
 ##################################################################################
 VALIDATE_LOGICAL_MODEL=true
 VALIDATE_MODEL_MAPPING=true
